// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Object Marker Clickable Object Marker 1`] = `
<section>
  

  <a
    class="fd-object-marker sap-icon--private"
  >
     
    <span
      class="fd-object-marker--link "
    >
      Locked
    </span>
  </a>
  

  <a
    class="fd-object-marker sap-icon--user-edit"
  >
    <span
      class="fd-object-marker--link"
    >
      Unsaved Changes
    </span>
  </a>
  


  <div
    dir="rtl"
  >
    

    <h4>
      RTL Support
    </h4>
    

    <a
      class="fd-object-marker sap-icon--private"
    >
       
      <span
        class="fd-object-marker--link "
      >
        Locked
      </span>
    </a>
    

    <a
      class="fd-object-marker sap-icon--user-edit"
    >
      <span
        class="fd-object-marker--link"
      >
        Unsaved Changes
      </span>
    </a>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Object Marker Icon And Text 1`] = `
<section>
  

  <span
    class="fd-object-marker sap-icon--request"
  >
    Request
  </span>
  

  <span
    class="fd-object-marker sap-icon--favorite"
  >
    Favourite
  </span>
  

  <span
    class="fd-object-marker sap-icon--flag"
  >
    Flag
  </span>
  

  <span
    class="fd-object-marker sap-icon--user-edit"
  >
    Draft
  </span>
  

  <span
    class="fd-object-marker sap-icon--private"
  >
    Locked
  </span>
  


  <div
    dir="rtl"
  >
    

    <h4>
      RTL Support
    </h4>
    

    <span
      class="fd-object-marker sap-icon--request"
    >
      Request
    </span>
    

    <span
      class="fd-object-marker sap-icon--favorite"
    >
      Favourite
    </span>
    

    <span
      class="fd-object-marker sap-icon--flag"
    >
      Flag
    </span>
    

    <span
      class="fd-object-marker sap-icon--user-edit"
    >
      Draft
    </span>
    

    <span
      class="fd-object-marker sap-icon--private"
    >
      Locked
    </span>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Object Marker Icon Only 1`] = `
<section>
  

  <span
    aria-label="icon for request"
    class="fd-object-marker sap-icon--request"
  />
  

  <span
    aria-label="icon for favourite"
    class="fd-object-marker sap-icon--favorite"
  />
  

  <span
    aria-label="icon for flag"
    class="fd-object-marker sap-icon--flag"
  />
  

  <span
    aria-label="icon for user edit"
    class="fd-object-marker sap-icon--user-edit"
  />
  

  <span
    aria-label="icon for private"
    class="fd-object-marker sap-icon--private"
  />
  

</section>
`;

exports[`Storyshots Components/Object Marker Marker Text 1`] = `
<section>
  

  <span
    class="fd-object-marker"
  >
    Draft
  </span>
  

  <span
    class="fd-object-marker"
  >
    Locked
  </span>
  

</section>
`;
